--- a/Object_Detection_from_Image_V_yoloV7.ipynb
+++ b/Object_Detection_from_Image_V_yoloV7.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPbwtEMG8vWBKUbHMHVEdGW",
+      "authorship_tag": "ABX9TyPeUcn6hzilKYU4jRI4FGdg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -79,12 +79,12 @@
     {
       "cell_type": "code",
       "source": [
-        "# Clone yolov7 & creating directories"
+        "# Creating the new directory"
       ],
       "metadata": {
         "id": "2tpwdYDbQTTR"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -133,6 +133,17 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Clone yolov7 from https://github.com/WongKinYiu/yolov7"
+      ],
+      "metadata": {
+        "id": "xm4KSJW6zSM6"
+      },
+      "execution_count": 23,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -319,15 +330,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "eKo9soI3uW23"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
